--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "002bbd49",
+   "id": "1c254b6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea5f7337",
+   "id": "174530e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c18e4b1a",
+   "id": "04b0465d",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cc5cea5d",
+   "id": "a7ccac18",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a04cbf4",
+   "id": "cd5e9f26",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a2f59a96",
+   "id": "454fbb48",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6bf50e0",
+   "id": "14fe100e",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4d17d302",
+   "id": "bf735a17",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "99150c43",
+   "id": "4cd09616",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "da5bb408",
+   "id": "1c8cead5",
    "metadata": {},
    "outputs": [
     {
@@ -655,8 +655,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "a693d689",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>others_cr</td>\n",
+       "      <td>2.898000e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>trend_adx</td>\n",
+       "      <td>3.399205e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>High</td>\n",
+       "      <td>1.466775e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>trend_adx_neg</td>\n",
+       "      <td>1.389269e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>trend_adx_pos</td>\n",
+       "      <td>1.347591e-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>volatility_kcp</td>\n",
+       "      <td>8.486256e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adj Close</td>\n",
+       "      <td>6.350243e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>volatility_kchi</td>\n",
+       "      <td>5.619285e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>trend_visual_ichimoku_a</td>\n",
+       "      <td>5.458463e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>trend_visual_ichimoku_b</td>\n",
+       "      <td>4.082316e-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Feature    Importance\n",
+       "26                others_cr  2.898000e-01\n",
+       "18                trend_adx  3.399205e-12\n",
+       "1                      High  1.466775e-12\n",
+       "20            trend_adx_neg  1.389269e-12\n",
+       "19            trend_adx_pos  1.347591e-12\n",
+       "13           volatility_kcp  8.486256e-13\n",
+       "3                 Adj Close  6.350243e-13\n",
+       "14          volatility_kchi  5.619285e-13\n",
+       "21  trend_visual_ichimoku_a  5.458463e-13\n",
+       "22  trend_visual_ichimoku_b  4.082316e-13"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the feature importance\n",
+    "importances = lr.coef_\n",
+    "\n",
+    "# Convert the importances into a DataFrame\n",
+    "feature_importances = pd.DataFrame({'Feature': X.columns, 'Importance': importances})\n",
+    "\n",
+    "# Sort the DataFrame by the importance\n",
+    "feature_importances.sort_values('Importance', ascending=False, inplace=True)\n",
+    "\n",
+    "# Display the top 10 features\n",
+    "feature_importances.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b8410276",
+   "id": "4b470d9f",
    "metadata": {},
    "outputs": [],
    "source": []
