--- a/notebooks/linear_regression.ipynb
+++ b/notebooks/linear_regression.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "04b0465d",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "      <th>Volume</th>\n",
        "      <th>volume_adi</th>\n",
        "      <th>volume_obv</th>\n",
-       "      <th>volume_cmf</th>\n",
+       "      <th>volume_vpt</th>\n",
        "      <th>...</th>\n",
        "      <th>adj close_inr=x</th>\n",
        "      <th>open_treasury_yeild_10_years</th>\n",
@@ -84,7 +84,7 @@
        "      <td>23090.0</td>\n",
        "      <td>-7282.243929</td>\n",
        "      <td>23090.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-5944.188495</td>\n",
        "      <td>...</td>\n",
        "      <td>42.189999</td>\n",
        "      <td>4.025</td>\n",
@@ -108,7 +108,7 @@
        "      <td>7740.0</td>\n",
        "      <td>-2503.626973</td>\n",
        "      <td>15350.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-19953.554735</td>\n",
        "      <td>...</td>\n",
        "      <td>42.242001</td>\n",
        "      <td>3.948</td>\n",
@@ -132,7 +132,7 @@
        "      <td>4825.0</td>\n",
        "      <td>-6363.626973</td>\n",
        "      <td>10525.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-226.096636</td>\n",
        "      <td>...</td>\n",
        "      <td>42.512001</td>\n",
        "      <td>3.888</td>\n",
@@ -156,7 +156,7 @@
        "      <td>9260.0</td>\n",
        "      <td>-6581.514215</td>\n",
        "      <td>19785.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-12.507972</td>\n",
        "      <td>...</td>\n",
        "      <td>42.792999</td>\n",
        "      <td>3.957</td>\n",
@@ -180,7 +180,7 @@
        "      <td>9600.0</td>\n",
        "      <td>-14901.515232</td>\n",
        "      <td>10185.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-13.259779</td>\n",
        "      <td>...</td>\n",
        "      <td>42.716000</td>\n",
        "      <td>4.038</td>\n",
@@ -195,23 +195,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 112 columns</p>\n",
+       "<p>5 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date       Open       High        Low      Close  Adj Close   Volume  \\\n",
-       "0  2008-06-02  27.200001  32.400002  27.200001  28.980000  24.893616  23090.0   \n",
-       "1  2008-06-03  29.000000  29.000000  27.850000  28.780001  24.721815   7740.0   \n",
-       "2  2008-06-04  30.000000  30.000000  27.500000  27.750000  23.837053   4825.0   \n",
-       "3  2008-06-05  29.100000  29.100000  27.400000  28.230000  24.249369   9260.0   \n",
-       "4  2008-06-06  28.000000  29.959999  27.559999  27.719999  23.811281   9600.0   \n",
+       "        Date       Open       High        Low      Close  Adj Close   Volume  \\\n",
+       "0 2008-06-02  27.200001  32.400002  27.200001  28.980000  24.893616  23090.0   \n",
+       "1 2008-06-03  29.000000  29.000000  27.850000  28.780001  24.721815   7740.0   \n",
+       "2 2008-06-04  30.000000  30.000000  27.500000  27.750000  23.837053   4825.0   \n",
+       "3 2008-06-05  29.100000  29.100000  27.400000  28.230000  24.249369   9260.0   \n",
+       "4 2008-06-06  28.000000  29.959999  27.559999  27.719999  23.811281   9600.0   \n",
        "\n",
-       "     volume_adi  volume_obv  volume_cmf  ...  adj close_inr=x  \\\n",
-       "0  -7282.243929     23090.0         NaN  ...        42.189999   \n",
-       "1  -2503.626973     15350.0         NaN  ...        42.242001   \n",
-       "2  -6363.626973     10525.0         NaN  ...        42.512001   \n",
-       "3  -6581.514215     19785.0         NaN  ...        42.792999   \n",
-       "4 -14901.515232     10185.0         NaN  ...        42.716000   \n",
+       "     volume_adi  volume_obv    volume_vpt  ...  adj close_inr=x  \\\n",
+       "0  -7282.243929     23090.0  -5944.188495  ...        42.189999   \n",
+       "1  -2503.626973     15350.0 -19953.554735  ...        42.242001   \n",
+       "2  -6363.626973     10525.0   -226.096636  ...        42.512001   \n",
+       "3  -6581.514215     19785.0    -12.507972  ...        42.792999   \n",
+       "4 -14901.515232     10185.0    -13.259779  ...        42.716000   \n",
        "\n",
        "   open_treasury_yeild_10_years  high_treasury_yeild_10_years  \\\n",
        "0                         4.025                         4.046   \n",
@@ -241,10 +241,10 @@
        "3             73.040001  \n",
        "4             72.389999  \n",
        "\n",
-       "[5 rows x 112 columns]"
+       "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "a7ccac18",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "cd5e9f26",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,14 +801,6 @@
     "# Display the top 10 features\n",
     "feature_importances.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b470d9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
